--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+/.idea/git_toolbox_prj.xml
+/.idea/modules.xml
+/.idea/php.xml
+/.idea/phpunit.xml
+/.idea/PiDef_Sportify.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
