--- a/.env
+++ b/.env
@@ -36,5 +36,22 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://3f7937f3fcfafd:248414c2778d02@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=smtp://3f7937f3fcfafd:248414c2778d02@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/google-mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+# MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
