--- a/.env
+++ b/.env
@@ -36,5 +36,18 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://cdba6818ae448b:9c4229dc9119eb@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
+
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6Lffuc4kAAAAAAqWXEfVramCFxXH8NlHbX_DDOKI
+RECAPTCHA3_SECRET=6Lffuc4kAAAAAAg-2a0JvmrAIw_KfIkFPwJyrzwx
+###< karser/karser-recaptcha3-bundle ###
