--- a/.env
+++ b/.env
@@ -37,4 +37,18 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://e05b069153af64:6982ec19fd914b@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+#MAILER_DSN=gmail+smtp://pidevmailer00@gmail.com:23610318@default?verify_peer=0
+#MAILER_URL=gmail://pidevmailer00@gmail.com:23610318@localhost
+###< symfony/google-mailer ###
+
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6LcaJMokAAAAAMqlCqWfuogJwXiCsDYtx8uJgvzJ
+RECAPTCHA3_SECRET=6LcaJMokAAAAAN5R9uBmjM7MgDKCUUVv3QY6O4Y1
+###< karser/karser-recaptcha3-bundle ###
