--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,14 +15,16 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
+            user_checker: App\Security\UserChecker
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppCustomAuthenticator
             logout:
-                path: app_logout
+                path: app_logout    
                 # where to redirect after logout
                 # target: app_any_route
-
+        
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
