--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "dompdf/dompdf": "^2.0",
+        "endroid/qr-code": "^4.8",
         "karser/karser-recaptcha3-bundle": "^0.1.23",
+        "knplabs/knp-paginator-bundle": "*",
+        "mercuryseries/flashy-bundle": "^5.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
         "sensio/framework-extra-bundle": "^6.1",
