--- a/.env
+++ b/.env
@@ -36,31 +36,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://3f7937f3fcfafd:248414c2778d02@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
-
-###> symfony/google-mailer ###
-# Gmail SHOULD NOT be used on production, use it in development only.
-<<<<<<< HEAD
-# MAILER_DSN=smtp://3f7937f3fcfafd:248414c2778d02@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
-=======
- MAILER_DSN=gmail://email:password@localhost?verify_peer=0 
->>>>>>> bb4b5810e0571a8461c5ef9cc615a24bc2425ef2
-###< symfony/google-mailer ###
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-<<<<<<< HEAD
-# MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
-
-###> knplabs/knp-snappy-bundle ###
-WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
-WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
-###< knplabs/knp-snappy-bundle ###
-=======
-MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
->>>>>>> bb4b5810e0571a8461c5ef9cc615a24bc2425ef2
