--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.14",
-        "sensio/framework-extra-bundle": "^6.2",
+        "doctrine/orm": "^2.13",
+        "mercuryseries/flashy-bundle": "^5.1",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.8",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
