--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,7 +12,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     
-   
+        bind:
+            $stripeSK: "%env(STRIPE_SK)%"
+ 
    
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -39,3 +41,4 @@ services:
 
     # Add an alias for the twilio.client service
     Twilio\Rest\Client: '@twilio.client'
+    
